# recommendation_system

./: .gitignore  README.md  prepare_data.ipynb  pyproject.toml  traning_model.ipynb  traning_model_and_integration_result.ipynb
app/: main.py
app/base/: responseModelFeatures.py  responseModelItems.py
app/recommend_system/: recommendModule.py
app/weight/: dataset.csv
tests/: test_main.py  test_unit.py
